src/App.css
/* ... */
.navbar--items>ul {
  list-style: none;
  display: flex;
  align-items: flex-start;
  gap: 42.667px;
  text-decoration: none;
}

.navbar--items ul>li>a {
  text-decoration: none;
}

.navbar--content {
  color: var(--darkblue);
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  cursor: pointer;
}

.navbar--active-content {
  color: var(--primary);
}

/* Navbar Styles End */

/* Hero Section */
.hero--section {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  padding: 83.333px 83.333px 43.333px;
  align-items: center;
  justify-content: space-between;
  gap: 32px;
  background-color: var(--bg-shade);
}

.hero--section--content-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
}

.hero--section--content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 21.333px;
}

.hero--section--content--box>button {
  margin-top: 21.333px;
}

.hero--section--title {
  color: var(--heading-color);
  font-size: 74.667px;
  font-weight: 700;
  line-height: 90px;
  align-self: stretch;
}

.hero--section--title--color {
  color: var(--primary);
}

.hero--section-description {
  color: var(--darkblue);
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
  text-align: justify;
}

.hero--section--contact {
  margin-top: 10px;
}

.hero--section--img {
  display: flex;
}

.hero--section--img>img {
  width: 100%;
  height: 100%;
}

/* Hero Section Ends*/

/* Skills Section Style */
.skills--section {
  display: flex;
  padding: 83.33px 85.33px;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 66.667px;
}

.skills--section--heading {
  color: var(--heading-color);
  font-size: 64px;
  font-weight: 700;
  line-height: 77px;
}

.skills--section--container {
  display: grid;
  justify-content: center;
  align-items: flex-start;
  gap: 42.6px;
  grid-template-columns: repeat(4, 1fr);
}

.skills--section--card {
  display: flex;
  padding: 32px;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  flex: 1 0 0;
  border-radius: 10.6px;
  background: var(--bg-shade);
  min-height: 380px;
}

.skills--section--card:hover {
  border-bottom: 4px solid var(--primary);
}

.skills--section--card:hover .skills--section--description {
  color: var(--darkblue);
}

.skills--section--img {
  display: flex;
  padding: 13.3px;
  justify-content: center;
  align-items: center;
  gap: 13.3px;
  border-radius: 10.6px;
  background: #fff;
  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
}

.skills--section--card--content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  align-self: stretch;
}

.skills--section--title {
  color: var(--heading-color);
  font-size: 32px;
  font-weight: 700;
  line-height: 45px;
}

.skills--section--description {
  color: var(--black);
  font-size: 21.3px;
  font-style: normal;
  font-weight: 400;
  line-height: 32px;
}

/* Skills Section Style Ends*/

/* About Us Section */
.about--section {
  display: grid;
  padding: 83.3px 85.3px;
  align-items: center;
  gap: 114.6px;
  grid-template-columns: repeat(2, 1fr);
}

.about--section--img>img {
  width: 100%;
  height: 100%;
}

/* About Us Section Ends */

/* My Portfolio Starts */
.portfolio--section {
  display: flex;
  padding: 45px 55px;
  flex-direction: column;
  align-items: flex-start;
  gap: 60px;
}

.portfolio--section--github {
  height: 60px;
}

.portfolio--container-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.portfolio--container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 21.3px;
}

.portfolio--section--container {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: 42.6px;
  width: 100%;
}

.portfolio--section--img {
  border-radius: 8px;
  width: 100%;
}

.portfolio--section--img>img {
  width: 100%;
}

.portfolio--section--card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  flex: 1 0 0;
  background: #fff;
  box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
  /* cursor: pointer; */
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  min-height: 700px;
}

.portfolio--section--card--content {
  display: flex;
  padding: 32px;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  align-self: stretch;
}

.portfolio--section--title {
  color: var(--heading-color);
}

.portfolio--link {
  text-decoration: none;
  display: flex;
  gap: 16px;
  border-bottom: 1.33px solid var(--primary);
  padding-bottom: 10.6px;
  font-weight: 600;
  overflow-wrap: anywhere;
}

/* .portfolio--section--card:hover {
  stroke: #006b6a;
  background-color: var(--bg-shade);
  transform: scale(1.03);
  transition: all ease-in-out 0.4s;
} */

/* Portfolio Ends */

/* My certification Starts */
.certification--section {
  display: flex;
  padding: 45px 55px;
  flex-direction: column;
  align-items: flex-start;
  gap: 60px;
}

.certification--section--github {
  height: 60px;
}

.certification--container-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.certification--container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 21.3px;
}

.certification--section--container {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  gap: 42.6px;
  width: 100%;
}

.certification--section--img {
  border-radius: 8px;
  width: 100%;
}

.certification--section--img>img {
  width: 100%;
}

.certification--section--card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 32px;
  flex: 1 0 0;
  background: #fff;
  box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
  /* cursor: pointer; */
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;

}
/* ... */

